# school-code

./: .gitignore  CMakeLists.txt  KernighanRitchie.c  README.md  additional_task.c  chapter_01.c  chapter_02.c  chapter_03.c  chapter_04.c  chapter_05.c  chapter_06.c  chapter_07.c  chapter_08.c  chapter_09.c  chapter_10.c  chapter_11.c  chapter_12.c  chapter_13.c  chapter_14.c  chapter_15.c  chapter_16.c  exam.c  game.c  games.c  global.h  library.c  library.h  main.c  tasks.txt  tasks_advanced.txt  theory.c
KR/: KernighanRitchie.c
assembler/: ASM_RUN.BAT  DEBUG.BAT  MAIN.ASM  dosbox.conf.txt  main_utf.txt
